<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="openInPebbleAppStore">Open in Pebble App Store</string>
    <string name="pebbleAppInstallDialog">
        Do you want to open Pebble App Store to install Pebble Dialer to your Pebble?
    </string>
    <string name="openingPebbleAppFailed">Opening Pebble app failed. Do you have Pebble app installed?</string>

    <string name="openSettingsError">Unable to open settings page. Please find it in Settings app and open it manually.</string>
    <string name="noEntries">No entries</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="settingCannedResponses">Canned Responses</string>
    <string name="settingWritingPhrases">Writing Phrases</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="tasker_change_settings">Change Settings</string>
    <string name="tasker_change_settings_long">Change Dialer for Pebble Settings</string>
    <string name="sms_failed">Failed to send SMS. Please try again.</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="general_settings">General settings</string>
    <string name="messaging">Messaging</string>
    <string name="about">About</string>
    <string name="home">Tips and tricks</string>
    <string name="notification_service_is_not_running">Notification service is not running</string>
    <string name="notification_service_not_running_description">Some features (such as call answering) may not be working</string>
    <string name="tap_card_to_fix_it">Tap this card to fix it</string>
    <string name="filtering_tip_name">Contact filtering</string>
    <string name="filtering_tip_description">Before you start scrolling through your contact list, you will be put into filtering mode first. Filtering allows you to quickly find wanted contact without long scrolling. \n\nWhen in filtering mode, simply press buttons corresponding to the letters:</string>
    <string name="filtering_tip_example">To filter for \'Michael\' for example, you would press SELECT, SELECT, UP, SELECT, UP, UP, SELECT.</string>
    <string name="tip_filtering_finish">When you are finished with filtering, hold down SELECT button to switch into scrolling mode.</string>
    <string name="tip_call_history_title">Open contact from call history</string>
    <string name="tip_call_history_body">When scrolling through call history, you can call the number back by pressing SELECT button or access all numbers of this contact by holding SELECT button</string>
    <string name="tip_disable_pebble_notification_title">Disable \'Phone Calls\' in Pebble Time app</string>
    <string name="tip_disable_pebble_notification_body">In order to not get duplicate call notifications, you must disable native call notifications.\n\nIn Pebble Time app, slide over to notifications tab (bell icon) and uncheck \'Phone Calls\'.</string>
    <string name="tip_tertiary_text_title">Writing SMS from the watch</string>
    <string name="tip_tertiary_text_body">Tap on this card to open Tertiary Text manual.</string>
    <string name="tip_faq_title">Frequently Asked Questions</string>
    <string name="tip_faq_body">Tap on this card to open full manual, including list of other Frequently Asked Questions.</string>
    <string name="notification_service_enabling_instructions">Enable Dialer for Pebble on the list</string>
    <string name="error_no_web_browser">Could not open the webpage. Do you have any web browser installed?</string>
    <string name="customize_call_screen">Customize call screen</string>
    <string name="app_name">Dialer for Pebble</string>
    <string name="do_not_disturb_access_is_not_granted">DO NOT DISTURB ACCESS IS NOT GRANTED</string>
    <string name="do_not_disturb_access_is_not_granted_description">Some features (such as mute ringer action) may not be working.</string>
</resources>