<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    style="@style/TipCard"
    app:cardBackgroundColor="#ff5050"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/do_not_disturb_access_is_not_granted"
            android:textAllCaps="true"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/do_not_disturb_access_is_not_granted_description"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_card_to_fix_it"/>

    </LinearLayout>

</android.support.v7.widget.CardView>