<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/AppSettingParent"
                android:id="@+id/parentView"
                android:background="@drawable/list_background"
                android:clickable="true">
    <Button
        android:id="@+id/addButton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add"/>
    <LinearLayout
        android:id="@+id/listContainer"
        android:layout_below="@id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>

    <TextView
        android:id="@+id/listEmptyText"
        android:layout_below="@id/listContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noEntries"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/closeButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@id/listEmptyText"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/close"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
